# django-pucas

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml  unit_tests.yml
ci/: testsettings.py
pucas/: __init__.py  apps.py  cas_urls.py  ldap.py  ldapsearch.py  searchldap.py  signals.py  tests.py
pucas/management/commands/: createcasuser.py  ldapsearch.py
pucas/static/pucas/: pu-login.css
pucas/templates/pucas/: pu-cas-login.html  sample-pu-login.html
src/pucas/: __init__.py  cas_urls.py  ldap.py  signals.py
src/pucas/management/commands/: createcasuser.py
src/pucas/templates/pucas/: cas-login.html  sample-admin-login.html
